# SIGMA

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  seed.py
app/: main.py
app/api/: router.py
app/api/routes/: aluno.py
app/core/: config.py  database.py
app/models/: __init__.py  aluno.py
app/repositories/: aluno.py
app/schemas/: aluno.py
app/services/: aluno.py
